// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should edit title 1`] = `
<div
  className="p-inplace p-component p-inplace-closable flex"
>
  <div
    aria-label={null}
    className="p-inplace-display"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="flex"
    >
      foo
    </div>
  </div>
</div>
`;

exports[`should get layout 1`] = `
<div
  className="flex flex-column flex-1"
>
  <div
    className="flex flex-row"
  />
  <div
    className="flex flex-1 flex-column"
  >
    <div />
  </div>
</div>
`;

exports[`should render 1`] = `
<a
  href="/automations"
  onClick={[Function]}
  onMouseEnter={[Function]}
>
  404
</a>
`;

exports[`should render with manifest tab active 1`] = `
<div
  className="flex flex-column flex-1"
>
  <div
    className="flex flex-row"
  />
  <div
    className="flex flex-1 flex-column"
  >
    Foo
  </div>
</div>
`;
